--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,3 +4,21 @@
 @import 'atomic';
 @import 'round-loader';
 @import 'ant-design-override';
+
+.main-layout {
+	background-color: white;
+	width: 100%;
+	height: 100%;
+	padding: 10px;
+}
+
+.todo__list__table {
+	width: 75%;
+	margin: 0 auto;
+	background-color: #fbb478;
+
+	tr {
+		background-color: white;
+		margin: 10px;
+	}
+}
