kanban board design added

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,3 +22,19 @@
 		margin: 10px;
 	}
 }
+
+.kanban {
+	display: flex;
+	justify-content: space-between;
+	.kanban__group {
+		width: 100%;
+		margin: 5px;
+		.kanban__box {
+			width: 100%;
+			padding: 10px;
+			margin-bottom: 10px;
+			border: 1px solid #ccc;
+			border-radius: 5px;
+		}
+	}
+}
