--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -50,7 +50,6 @@
 				position: absolute;
 				top: 0;
 				right: 0;
-				background-color: yellow;
 				border-radius: 5px;
 				opacity: 0;
 			}
@@ -59,6 +58,10 @@
 				.kanban__box__actions {
 					opacity: 1;
 				}
+			}
+
+			.kanban__box__actions__delete {
+				margin-right: 5px;
 			}
 		}
 	}
