--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -72,4 +72,15 @@
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 16px;
+	background-color: whitesmoke;
+	margin: 2px 0 5px;
+	padding: 5px;
+	color: black;
+	border-radius: 20px;
+}
+
+.todo-date-label {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 5px;
 }
