--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -32,7 +32,7 @@
 		width: 100%;
 		margin: 5px;
 		padding: 5px;
-		background-color: #ccc;
+		// background-color: #ccc;
 		border-radius: 5px;
 
 		.kanban__box {
@@ -49,9 +49,11 @@
 			}
 
 			.kanban__box__actions {
+				background-color: #000;
+				padding: 2px;
 				position: absolute;
-				top: 0;
-				right: 0;
+				top: 5px;
+				right: 5px;
 				border-radius: 5px;
 				opacity: 0;
 			}
@@ -63,7 +65,7 @@
 			}
 
 			.kanban__box__actions__delete {
-				margin-right: 5px;
+				// margin-right: 5px;
 			}
 		}
 	}
@@ -85,4 +87,16 @@
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 5px;
+}
+
+.todo-new {
+	background-color: rgba(93, 110, 239, 0.5);
+}
+
+.todo-inprogress {
+	background-color: rgba(253, 166, 41, 0.5);
+}
+
+.todo-completed {
+	background-color: rgba(145, 211, 141, 0.5);
 }
