--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,17 +10,7 @@
 	width: 100%;
 	height: 100%;
 	padding: 10px;
-}
-
-.todo__list__table {
-	width: 75%;
-	margin: 0 auto;
-	background-color: #fbb478;
-
-	tr {
-		background-color: white;
-		margin: 10px;
-	}
+	min-height: 100vh;
 }
 
 .kanban {
