background colors are removed

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -80,13 +80,13 @@
 }
 
 .todo-new {
-	background-color: rgba(93, 110, 239, 0.5);
+	// background-color: rgba(93, 110, 239, 0.5);
 }
 
 .todo-inprogress {
-	background-color: rgba(253, 166, 41, 0.5);
+	// background-color: rgba(253, 166, 41, 0.5);
 }
 
 .todo-completed {
-	background-color: rgba(145, 211, 141, 0.5);
+	// background-color: rgba(145, 211, 141, 0.5);
 }
