all eslint errors are fixed

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,20 +1,18 @@
 $dark_hash: #404751;
-$navy_blue: #0091C6;
+$navy_blue: #0091c6;
 
-$primary: "blue";
-$warn: #D71D37;
-$gray: "gray";
+$primary: 'blue';
+$warn: #d71d37;
+$gray: 'gray';
 $green: rgb(41, 142, 15);
-$yellow: "yellow";
+$yellow: 'yellow';
 
 $light_black: #222222;
 $light_gray: #525353;
-$dark_gray: #3D3D3E;
-$very_light_grey: #E7E8E8;
-$bg-grey: #F7F8FA;
-$label_font_grey: #ADADAD;
-
-
+$dark_gray: #3d3d3e;
+$very_light_grey: #e7e8e8;
+$bg-grey: #f7f8fa;
+$label_font_grey: #adadad;
 
 $font-extra-tiny: 10px;
 $font-tiny: 12px;
